force-app/main/default/objects/Demo__c/Demo__c.object-meta.xml
<CustomObject>
    <label>Demo</label>
    <nameField>
        <label>Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>