force-app/main/default/objects/Demo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demos</relationshipLabel>
    <relationshipName>Demos</relationshipName>
    <type>Lookup</type>
</CustomField>