force-app/main/default/objects/Demo__c/fields/Are_You_Indian__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Indian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are You Indian</label>
    <type>Checkbox</type>
</CustomField>