force-app/main/default/objects/Demo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32</length>
    <type>Text</type>
</CustomField>