force-app/main/default/objects/Demo__c/recordTypes/Dynpro_User.recordType-meta.xml
<RecordType>
    <fullName>Dynpro_User</fullName>
    <active>true</active>
    <label>Dynpro User</label>
</RecordType>