force-app/main/default/objects/Demo__c/validationRules/Phone_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_10_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Phone__c)),
    NOT(
        REGEX(Phone__c, &quot;^[0-9]{10}$&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone number should be always 10 Digits</errorMessage>
</ValidationRule>